# Langchain-Projects

./: README.md  main.py  pyproject.toml
Document-helper/: ingestion.py  main.py
Document-helper/backend/: core.py
Ecommerce-Agent/: AgentLoop_Raw_Function_calling.py  README.md  pyproject.toml  tool_calling.py
RAG/: RAG.py  ingestion.py  mediumblog.txt
tools/: tavily_search.py  tools_search.py
