[project]
name = "ecommerce-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "black>=24.0.0",
    "dotenv>=0.9.9",
    "isort>=5.0.0",
    "langchain>=0.3.0",
    "langchain-ollama>=0.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]
